# Komac

./: .all-contributorsrc  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  README.md  build.gradle.kts  build.rs  conveyor.conf  gen-spec.sh  gradle.properties  gradlew  komac.spec  libs.versions.toml  rustfmt.toml  settings.gradle.kts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feat.yml
.github/workflows/: add_to_all_contributors.yml  audit.yml  build.yml  build_and_release.yml  codeql.yml  merge_all_contributors_pr.yml  nightly.yml  pr_edit_rights.yml  release.yml  renovate.yml  update-graphql-schema.yml  update-inno-dependencies.yml  vhs.yml
assets/: github.graphql  gpl-3.0.rst  installer.iss
assets/branding/: README.md
assets/inno/: CodeDependencies.iss  gpl-3.0.rst  installer.iss
assets/vhs/: demo.tape  new_package.tape  sync.tape
config/detekt/: detekt.yml
config/wix/: main.wxs
gradle/: libs.versions.toml
src/: credential.rs  default_locale_manifest.rs  download_file.rs  editor.rs  file_analyser.rs  graphql.rs  hyperlink.rs  installer_manifest.rs  iterable_extensions.rs  locale_manifest.rs  main.rs  manifest.rs  match_installers.rs  msi.rs  token.rs  update_state.rs  url_utils.rs  version_manifest.rs  zip.rs
src/analysis/: analyzer.rs  extensions.rs  metadata.rs  mod.rs  trait.rs
src/analysis/installers/: advanced.rs  exe.rs  mod.rs  zip.rs
src/commands/: analyse.rs  analyze.rs  cleanup.rs  complete.rs  list_versions.rs  merge_upstream.rs  mod.rs  new_version.rs  remove_dead_versions.rs  remove_version.rs  show_version.rs  submit.rs  sync_fork.rs  update.rs  update_version.rs  utils.rs
src/commands/token/: commands.rs  mod.rs  remove.rs  token.rs  update.rs
src/commands/utils/: environment.rs  github_token_arg.rs  mod.rs  ordinal.rs  pointer.rs  rate_limit.rs  submit_option.rs
src/commonMain/kotlin/: Errors.kt  Komac.kt
src/download/: downloader.rs  file.rs  mod.rs
src/exe/: mod.rs  utils.rs  var_dword.rs  vs_file_flags.rs  vs_fixed_file_info.rs  vs_header.rs  vs_string.rs  vs_string_file_info.rs  vs_string_table.rs  vs_var.rs  vs_var_file_info.rs  vs_version_info.rs
src/exe/inno/: header.rs  inno.rs  loader.rs  mod.rs  version.rs
src/github/: client.rs  error.rs  github_client.rs  github_utils.rs  mod.rs  pr_changes.rs  utils.rs  winget_source.rs
src/github/graphql/: create_commit.rs  create_pull_request.rs  create_ref.rs  delete_ref.rs  get_all_values.rs  get_branches.rs  get_current_user.rs  get_current_user_login.rs  get_deep_directory_content.rs  get_directory_content.rs  get_file_content.rs  (+10 more)
src/graphql/: queries.graphql
src/installers/: burn.rs  mod.rs  msi.rs  possible_installers.rs  utils.rs  zip.rs
src/manifests/: default_locale_manifest.rs  generic.rs  installer_manifest.rs  locale_manifest.rs  manifest.rs  mod.rs  url.rs  version_manifest.rs
src/msix_family/: mod.rs  msix.rs  msix_utils.rs  msixbundle.rs  utils.rs
src/prompts/: check.rs  list.rs  list_prompt.rs  mod.rs  multi.rs  multi_prompt.rs  prompt.rs  text.rs
src/read/: ext.rs  mod.rs
src/terminal/: hyperlink.rs  mod.rs
src/traits/: ascii_ext.rs  mod.rs  name.rs  path.rs  url.rs
src/types/: architecture.rs  author.rs  command.rs  copyright.rs  custom_switch.rs  description.rs  file_extension.rs  install_modes.rs  installation_notes.rs  installer_success_code.rs  installer_switch.rs  installer_type.rs  language_tag.rs  license.rs  manifest_type.rs  manifest_version.rs  minimum_os_version.rs  mod.rs  moniker.rs  package_identifier.rs  package_name.rs  package_version.rs  path.rs  protocol.rs  publisher.rs  release_notes.rs  sha_256.rs  short_description.rs  silent_switch.rs  silent_with_progress_switch.rs  tag.rs  version.rs
winget/: Cargo.toml
winget-types/: Cargo.toml
winget-types/src/: lib.rs
winget-types/src/installer/: apps_and_features_entry.rs  architecture.rs  command.rs  dependencies.rs  elevation_requirement.rs  expected_return_codes.rs  file_extension.rs  install_modes.rs  installation_metadata.rs  installer_return_code.rs  installer_type.rs  markets.rs  minimum_os_version.rs  mod.rs  platform.rs  protocol.rs  repair_behavior.rs  return_response.rs  scope.rs  unsupported_arguments.rs  unsupported_os_architectures.rs  upgrade_behavior.rs
winget-types/src/installer/nested/: installer_files.rs  mod.rs
winget-types/src/installer/switches/: custom.rs  install_location.rs  interactive.rs  log.rs  mod.rs  repair.rs  silent.rs  silent_with_progress.rs  switch.rs  upgrade.rs
winget-types/src/locale/: agreement.rs  author.rs  copyright.rs  description.rs  installation_notes.rs  license.rs  mod.rs  moniker.rs  package_name.rs  publisher.rs  release_notes.rs  short_description.rs  tag.rs
winget-types/src/locale/icon/: file_type.rs  mod.rs  resolution.rs  theme.rs
winget-types/src/shared/: generic.rs  language_tag.rs  manifest_type.rs  manifest_version.rs  mod.rs  package_identifier.rs  package_version.rs  sha_256.rs  value.rs  version.rs
winget-types/src/shared/url/: copyright_url.rs  license_url.rs  mod.rs  package_url.rs  publisher_support_url.rs  publisher_url.rs  release_notes_url.rs
winget-types/src/traits/: closest.rs  manifest.rs  mod.rs
winget-types/src/utils/: mod.rs  relative_dirs.rs
winget-types/src/version/: mod.rs
winget/src/: lib.rs
winget/src/installer/: command.rs  file_extension.rs  install_modes.rs  installer_return_code.rs  installer_type.rs  minimum_os_version.rs  mod.rs  nested_installer_type.rs  platform.rs  protocol.rs  sha_256.rs
winget/src/installer/switches/: custom.rs  install_location.rs  interactive.rs  log.rs  mod.rs  repair.rs  silent.rs  silent_with_progress.rs  upgrade.rs
winget/src/locale/: description.rs  installation_notes.rs  license.rs  mod.rs  moniker.rs  short_description.rs  tag.rs
winget/src/shared/: language_tag.rs  manifest_type.rs  manifest_version.rs  mod.rs  package_identifier.rs  package_version.rs  value.rs  version.rs
winget/src/version/: mod.rs
(+719 files in other folders)
