[package]
name = "komac"
version = "2.15.0"
authors = ["Russell Banks"]
edition = "2024"
rust-version = "1.89"
description = "A manifest creator for winget-pkgs"
license = "GPL-3.0-or-later"
repository = "https://github.com/russellbanks/Komac"
readme = "README.md"
documentation = "https://github.com/russellbanks/Komac/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["winget", "winget-pkgs", "winget-cli", "windows"]
build = "build.rs"
include = ["**/*.rs", "assets/github.graphql", "assets/branding/logo.ico"]

[[bin]]
name = "komac"
path = "src/main.rs"

# https://doc.rust-lang.org/stable/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anstream = "0.6.21"
base64ct = { version = "1.8.3", features = ["std"] }
bitflags = "2.10.0"
bon = "3.8.2"
byteorder = "1.5.0"
bytes = "1.11.1"
bzip2 = "0.6.1"
cab = "0.6.0"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive", "cargo", "env"] }
clap_complete = "4.5.65"
color-eyre = { version = "0.6.5", default-features = false }
compact_str = "0.9.0"
const_format = { version = "0.2.35", features = ["derive"] }
crossbeam-channel = "0.5.15"
cynic = { version = "3.12.0", features = ["http-reqwest"] }
encoding_rs = "0.8.35"
flate2 = "1.1.9"
futures-util = "0.3.31"
html-escape = "0.2.13"
html2text = "0.16.7"
indexmap = "2.13.0"
indextree = "4.7.4"
indicatif = "0.18.0"
inno = { version = "0.4.0", features = ["lzma-static"] }
inquire = "0.9.3"
itertools = "0.14.0"
itoa = "1.0.17"
keyring = { version = "3.6.3", features = ["apple-native", "sync-secret-service", "vendored", "windows-native"] }
liblzma = { version = "0.4.5", features = ["static"] }
memchr = "2.7.6"
memmap2 = "0.9.9"
msi = "0.9.0"
nt-time = { version = "0.13.1", features = ["chrono"] }
num_cpus = "1.17.0"
open = "5.3.3"
ordinal = "0.4.0"
owo-colors = "4.2.3"
protobuf = "3.7.2"
quick-xml = { version = "0.39.0", features = ["serialize"] }
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.12.3"
reqwest = { version = "0.12.26", default-features = false, features = ["charset", "http2", "stream", "system-proxy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
sevenz-rust2 = "0.20.1"
sha2 = "0.10.9"
strsim = "0.11.1"
strum = { version = "0.27.2", features = ["derive"] }
supports-hyperlinks = "3.2.0"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "fs", "parking_lot"] }
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.22"
tree-sitter-highlight = "0.26.5"
tree-sitter-yaml = "0.7.2"
tui-textarea = { version = "0.7.0", features = ["search"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4"] }
walkdir = "2.5.0"
winget-types = { version = "0.4.2", features = ["serde", "std", "chrono"] }
yara-x = { version = "1.8.1", default-features = false, features = ["pe-module"] }
zerocopy = { version = "0.8.39", features = ["derive", "std"] }
zip = { version = "7.3.0", default-features = false, features = ["deflate"] }

[features]
default = ["openssl"]
openssl = ["keyring/crypto-openssl", "reqwest/native-tls-vendored"]
rustls = ["keyring/crypto-rust", "reqwest/rustls-tls"]

[build-dependencies]
cynic-codegen = { version = "3.12.0", features = ["rkyv"] }
windows_exe_info = { version = "0.5.2", features = ["manifest"] }

[dev-dependencies]
indoc = "2.0.7"
rstest = "0.26.1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/komac", dest = "/usr/bin/komac", mode = "755" },
]
