[package]
name = "komac"
version = "2.16.0"
authors = ["Russell Banks"]
edition = "2024"
rust-version = "1.95"
description = "A manifest creator for winget-pkgs"
license = "GPL-3.0-or-later"
repository = "https://github.com/russellbanks/Komac"
readme = "README.md"
documentation = "https://github.com/russellbanks/Komac/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["winget", "winget-pkgs", "winget-cli", "windows"]
build = "build.rs"
include = ["**/*.rs", "assets/github.graphql", "assets/branding/logo.ico"]

[[bin]]
name = "komac"
path = "src/main.rs"

# https://doc.rust-lang.org/stable/cargo/guide/build-performance.html#reduce-amount-of-generated-debug-information
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
anstream = "1.0.0"
base64ct = { version = "1.8.3", features = ["std"] }
bitflags = "2.11.1"
bon = "3.9.1"
bytes = "1.11.1"
bzip2 = "0.6.1"
cab = "0.6.0"
camino = { version = "1.2.2", features = ["serde1"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "cargo", "env"] }
clap_complete = "4.6.2"
codepage = "0.1.2"
color-eyre = { version = "0.6.5", default-features = false }
compact_str = "0.9.0"
const_format = { version = "0.2.35", features = ["derive"] }
crossbeam-channel = "0.5.15"
cynic = { version = "3.13.2", features = ["http-reqwest"] }
encoding_rs = "0.8.35"
flate2 = "1.1.9"
futures-util = "0.3.32"
html-escape = "0.2.13"
html2text = "0.17.1"
indexmap = "2.14.0"
indextree = "4.8.1"
indicatif = "0.18.4"
inno = { version = "0.4.2", features = ["lzma-static"] }
inquire = "0.9.4"
itertools = "0.14.0"
itoa = "1.0.18"
keyring-core = "0.7.4"
liblzma = { version = "0.4.6", features = ["static"] }
memchr = "2.8.0"
msi = "0.10.0"
nt-time = { version = "0.13.1", features = ["chrono"] }
num_cpus = "1.17.0"
open = "5.3.4"
ordinal = "0.4.0"
owo-colors = "4.3.0"
quick-xml = { version = "0.39.2", features = ["serialize"] }
rand = "0.10.1"
ratatui = "0.30.0"
ratatui-textarea = { version = "0.9.0", features = ["search"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "stream", "system-proxy"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
sha2 = "0.11.0"
strsim = "0.11.1"
strum = { version = "0.28.0", features = ["derive"] }
supports-hyperlinks = "3.2.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "fs", "parking_lot"] }
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.23"
tree-sitter-highlight = "0.26.8"
tree-sitter-yaml = "0.7.2"
typed-path = "0.12.3"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.0", features = ["v4"] }
walkdir = "2.5.0"
winget-types = { version = "0.4.3", features = ["serde", "std", "chrono"] }
zerocopy = { version = "0.8.48", features = ["derive", "std"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "0.3.3", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.3", features = ["keychain"] }

[target.'cfg(windows)'.dependencies]
windows-native-keyring-store = "0.5.1"

[features]
default = ["openssl"]
openssl = ["dbus-secret-service-keyring-store/crypto-openssl", "reqwest/native-tls-vendored"]
rustls = ["dbus-secret-service-keyring-store/crypto-rust", "reqwest/rustls"]

[build-dependencies]
cynic-codegen = { version = "3.13.2", features = ["rkyv"] }
windows_exe_info = { version = "0.5.2", features = ["manifest"] }

[dev-dependencies]
indoc = "2.0.7"
rstest = "0.26.1"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/komac", dest = "/usr/bin/komac", mode = "755" },
]
